MAJ fichier JS avec popup & bouton

--- a/javascript/style.css
+++ b/javascript/style.css
@@ -21,7 +21,7 @@ body
   color:#454545;
   padding:1em;
   text-align: justify;
-  font-family: Open sans, Arial, Sans serif;
+  font-family: Open sans, Papyrus, Comic Sans, Arial, Sans serif;
 }
 
 
